Fixed social media icons
Fixed the social media icons that were too big for the page, just made them smaller

--- a/main.css
+++ b/main.css
@@ -125,9 +125,9 @@ div#sideCont h3 {
  */
 
 a.fa {
-    padding: 20px;
-    font-size: 30px;
-    width: 30px;
+    padding: 13px;
+    font-size: 20px;
+    width: 20px;
     text-align: center;
     text-decoration: none;
     margin: 0;
